added: user schemas

--- a/tgbot/pyproject.toml
+++ b/tgbot/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+aiogram = "^3.4.1"
+pydantic-settings = "^2.2.1"
+apscheduler = "^3.10.4"
 
 
 [build-system]
