--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -7,7 +7,19 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = "^0.110.1"
+uvicorn = "^0.29.0"
+asyncpg = "^0.29.0"
+pydantic-settings = "^2.2.1"
+aio-pika = "^9.4.1"
+g4f = "^0.2.9.8"
+google-generativeai = "^0.5.0"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.1.1"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.6"
 
 [build-system]
 requires = ["poetry-core"]
