--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.2.1"
 aio-pika = "^9.4.1"
 g4f = "^0.2.9.8"
 google-generativeai = "^0.5.0"
+punq = "^0.7.0"
 
 
 [tool.poetry.group.test.dependencies]
