--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,8 @@ aio-pika = "^9.4.1"
 g4f = "^0.2.9.8"
 google-generativeai = "^0.5.0"
 punq = "^0.7.0"
+sqlalchemy = "^2.0.29"
+alembic = "^1.13.1"
 
 
 [tool.poetry.group.test.dependencies]
