added: base bot functions

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,10 @@ POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
+
+API_KEY_KADINSKY=
+API_SECRET_KEY_KADINSKY=
+
+AUTH_DATA_SBER=
+CLIENT_ID_SBER=
+CLIENT_SECRET_SBER=
