--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -17,6 +17,7 @@ google-generativeai = "^0.5.0"
 punq = "^0.7.0"
 sqlalchemy = "^2.0.29"
 alembic = "^1.13.1"
+openai = "^1.30.5"
 
 
 [tool.poetry.group.test.dependencies]
