--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -18,6 +18,7 @@ punq = "^0.7.0"
 sqlalchemy = "^2.0.29"
 alembic = "^1.13.1"
 openai = "^1.30.5"
+dishka = "^1.2.0"
 
 
 [tool.poetry.group.test.dependencies]
