--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -25,6 +25,7 @@ dishka = "^1.2.0"
 pytest = "^8.1.1"
 httpx = "^0.27.0"
 pytest-asyncio = "^0.23.6"
+locust = "^2.29.0"
 
 [build-system]
 requires = ["poetry-core"]
