--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -33,7 +33,7 @@ services:
       - internal
     ports:
       - 8000:8000
-    command: uvicorn presentation.main:create_app --host 0.0.0.0 --port 8000
+    command: gunicorn -c gunicorn.conf.py
 
   rabbitmq:
     container_name: rabbitmq-service
@@ -57,7 +57,7 @@ services:
   
   postgres:
     container_name: postgres
-    image: postgres:15.1
+    build: ./postgresql/
     hostname: postgres
     env_file:
       - ./api/.env
@@ -65,6 +65,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     networks:
       - internal
+    command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       interval: 10s
