--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -20,6 +20,8 @@ alembic = "^1.13.1"
 openai = "^1.30.5"
 dishka = "^1.2.0"
 gunicorn = "^22.0.0"
+taskiq = "^0.11.6"
+taskiq-aio-pika = "^0.4.0"
 
 
 [tool.poetry.group.test.dependencies]
