--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -29,6 +29,7 @@ pytest = "^8.1.1"
 httpx = "^0.27.0"
 pytest-asyncio = "^0.23.6"
 locust = "^2.29.0"
+testcontainers = {extras = ["postgres"], version = "^4.7.2"}
 
 [build-system]
 requires = ["poetry-core"]
