--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -30,6 +30,7 @@ httpx = "^0.27.0"
 pytest-asyncio = "^0.23.6"
 locust = "^2.29.0"
 testcontainers = {extras = ["postgres"], version = "^4.7.2"}
+mypy = "^1.10.1"
 
 [build-system]
 requires = ["poetry-core"]
