--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -32,7 +32,7 @@ services:
       context: ./api/
       dockerfile: ./Dockerfile
     env_file:
-      - ./api/.env
+      - ./api/.env.production
     networks:
       - internal
       - default
