--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     build: 
       context: ./tgbot/
       dockerfile: ./Dockerfile
+    volumes:
+      - ./tgbot/src:/app
     env_file:
       - ./tgbot/.env
     networks:
