--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .venv
 .vscode
-__pycache__
-*.pyc
 .env
 .env.production
-test.py
+.mypy_cache
 .pytest_cache
+__pycache__
+*.pyc
 ./bgtasks
+test.py
