--- a/api/src/alembic.ini
+++ b/api/src/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 # path to migration scripts
 script_location = ./infrastructure/persistence/migrations
-
+file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
 # see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
