--- a/tgbot/pyproject.toml
+++ b/tgbot/pyproject.toml
@@ -11,6 +11,7 @@ aiogram = "^3.4.1"
 pydantic-settings = "^2.2.1"
 apscheduler = "^3.10.4"
 httpx = "^0.27.0"
+python-logging-loki = "^0.3.1"
 
 
 [build-system]
