--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,7 +12,7 @@ uvicorn = "^0.29.0"
 asyncpg = "^0.29.0"
 pydantic-settings = "^2.2.1"
 aio-pika = "^9.4.1"
-g4f = "^0.2.9.8"
+g4f = "0.3.2.7"
 google-generativeai = "^0.5.0"
 punq = "^0.7.0"
 sqlalchemy = "^2.0.29"
@@ -23,6 +23,7 @@ gunicorn = "^22.0.0"
 taskiq = "^0.11.6"
 taskiq-aio-pika = "^0.4.0"
 python-logging-loki = "^0.3.1"
+curl-cffi = "^0.7.1"
 
 
 [tool.poetry.group.test.dependencies]
