--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - internal
       - default
-    command: sh -c "alembic upgrade head && gunicorn -c gunicorn.conf.py"
+    command: sh -c "alembic upgrade head && uvicorn --factory presentation.main:create_app --host 0.0.0.0 --port 8080"
 
   rabbitmq:
     container_name: rabbitmq-service
