--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -23,6 +23,7 @@ gunicorn = "^22.0.0"
 taskiq = "^0.11.6"
 taskiq-aio-pika = "^0.4.0"
 curl-cffi = "^0.7.1"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.group.test.dependencies]
