--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,25 @@
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+
+API_KEY_KADINSKY=
+API_SECRET_KEY_KADINSKY=
+
+AUTH_DATA_SBER=
+CLIENT_ID_SBER=
+CLIENT_SECRET_SBER=
+
+API_KEY_CHATGPT=
+API_KEY_GEMINI=
+BROKER_URL=
+
+
+BOT_TOKEN=
+HEAD_ADMIN_TG_ID=
+
+
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 RABBITMQ_HOST=
